made some changes to the layout. Added about and bio pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             min-height: 100vh;
         }
         #navigation {
-            width: 250px;
+            width: 100px;
             background-color: #F3F3F3;
             padding: 20px;
             border-right: 1px solid #EAEAEA;
@@ -42,7 +42,7 @@
         #logo img {
             display: block;
             margin: 0 auto 20px;
-            width: 100px;
+            width: 80px;
         }
         #content {
             flex-grow: 1;
@@ -73,11 +73,12 @@
         <!-- Navigation Section -->
         <div id="navigation">
             <div id="logo">
-                <a href="/"><img src="../assets/potato.jpg" alt="Logo"></a>
+                <a href="/"><img src="/assets/potato.jpg" alt="Logo"></a>
             </div>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
+                <li><a href="/bio.html">Bio</a></li>
             </ul>
         </div>
         <!-- Content Section -->
