--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,8 @@
         }
 
         #content h1 {
-            color: #4E9A06;
+            /* color: #4E9A06; */
+            color: #165896;
             font-size: 2em;
             margin-bottom: 20px;
         }
@@ -134,6 +135,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/bio.html">Bio</a></li>
+                <li><a href="/reading_list.html">Reading List</a></li>
             </ul>
         </div>
 
