added a temporary logo until Elsi draws a similar but much fancier one. Also removed the About page and updated my Reading List

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="A notepad-like desktop application inspired by wikis.">
     <meta name="author" content="your-email@example.com">
     <title>{{ page.title }}</title>
-    <link rel="icon" href="/assets/temp.png">
+    <link rel="icon" href="/assets/mini_logo.png">
     <style>
         /* Global Styles */
         body, html {
@@ -129,11 +129,10 @@
         <!-- Navigation Section -->
         <div id="navigation">
             <div id="logo">
-                <a href="/"><img src="/assets/potato.jpg" alt="Logo"></a>
+                <a href="/"><img src="/assets/logo.png" alt="Logo"></a>
             </div>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
                 <li><a href="/bio.html">Bio</a></li>
                 <li><a href="/reading_list.html">Reading List</a></li>
             </ul>
