--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             </div>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/bio">Bio</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="/reading_list">Reading List 📚</a></li>
                 <!-- <li><a href="/reading_list"><h3>📚 Reading List</h3></a></li> -->
             </ul>
